updating bitbucket pipeline

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -17,5 +17,5 @@ pipelines:
           deployment: Docker
           script:
             - 'apt-get update'
-            - 'apt-get install -y docker-ce'
+            - 'apt-get install -y docker'
             - './docker_deploy.rb'
