--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,15 +6,10 @@ Metrics/ClassLength:
   Max: 1500
 Metrics/BlockLength:
   Max: 50
+Metrics/ModuleLength:
+  Max: 200
 Metrics/AbcSize:
   Max: 30
-Layout/SpaceAroundEqualsInParameterDefault:
-  EnforcedStyle: space
-Style/SymbolArray:
-  Enabled: true
-Layout/HashAlignment:
-  EnforcedHashRocketStyle: table
-  EnforcedColonStyle: table
 Style/Documentation:
   Enabled: false
 AllCops:
